<resources>
    <string name="app_name">LendChain</string>
    <string name="netWorkError">"请检查网络设置"</string>
    <string name="app_name_thf">LendChain</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_sucess">下载成功</string>
    <string name="app_update">正在下载更新</string>
    <string name="now_is_the_latest_version">当前已经是最新版本</string>
    <string name="app_update_text">更新</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">首页</string>
    <string name="tab_invest">投资</string>
    <string name="tab_loan">借款</string>
    <string name="tab_mine">我的</string>
    <string name="app_exit">再次点击退出LendChain</string>
    <string name="refrensh_header_finish">刷新完成</string>
    <string name="refrensh_header_pulling">下拉可以刷新</string>
    <string name="refrensh_header_refreshing">正在刷新…</string>
    <string name="refrensh_header_release">释放立即刷新</string>
    <string name="refrensh_header_update">上次更新 M-d HH:mm</string>
    <string name="refrensh_footer_loading">正在加载…</string>
    <string name="refrensh_footer_nothing">没有更多数据了</string>
    <string name="cancel">取消</string>
    <string name="album">相册中选择</string>
    <string name="take_a_picture">拍照</string>
    <string name="permission_write_external_storage_not_allow">存储设备读写权限未开启,可以在应用管理里重新开启</string>
    <string name="permission_camera_not_allow">相机权限未开启,可以在应用管理里重新开启</string>
    <string name="confirm">确认</string>
    <string name="confirm_ding">确定</string>
    <string name="continue_">继续</string>
    <string name="no_login">未登录</string>
    <string name="no_data">暂无数据</string>
    <string name="key_board_view_submit_invest">确认\n投资</string>
    <string name="key_board_view_submit_pay">确认\n支付</string>
    <string name="ali_vsdk_network_error">网络不给力，请稍后再试</string>
    <string name="ali_vsdk_refresh">刷新</string>
    <string name="ali_vsdk_tips">安全验证</string>
    <string name="ali_vsdk_tips_finish">验证通过</string>
    <string name="ali_vsdk_tips_sub">为了你的帐号安全，本次登录需要进行验证。请将下方的图标，移动到圆形区域内</string>
    <string name="ali_vsdk_titlebar_back">返回</string>
    <string name="ali_vsdk_titlebar_name" />
    <string name="ali_vsdk_verify_call_calling">电话拨打中...请留意一下来电</string>
    <string name="ali_vsdk_verify_call_dialog_cancel">取消</string>
    <string name="ali_vsdk_verify_call_dialog_ok">接听</string>
    <string name="ali_vsdk_verify_call_goto_tips">现在接听语音安全验证?</string>
    <string name="ali_vsdk_verify_call_recall">收不到验证码，请重新接听电话</string>
    <string name="ali_vsdk_verify_call_title">语音安全验证</string>
    <string name="ali_vsdk_verify_code">验证码</string>
    <string name="ali_vsdk_verify_error">验证码错误，请重新输入</string>
    <string name="ali_vsdk_verify_error_call">验证码错误，请挂断电话，重新发送验证码</string>
    <string name="ali_vsdk_verify_in_progress">阿里聚安全验证中</string>
    <string name="ali_vsdk_verify_no_code">请输入验证码</string>
    <string name="ali_vsdk_verify_number">手机号</string>
    <string name="ali_vsdk_verify_sms_send_code">发送验证码</string>
    <string name="ali_vsdk_verify_sms_subtitle">已帮您抵御验证码劫持风险</string>
    <string name="ali_vsdk_verify_sms_timeout">%1$d秒后重新接收</string>
    <string name="ali_vsdk_verify_sms_title">短信安全验证</string>
    <string name="ali_vsdk_verify_sms_use_call">无法通过？接听语音安全验证</string>
    <string name="ali_vsdk_verify_submit">提交</string>
    <string name="symbol">1099</string>
    <string name="BorrowAmount">借入金额</string>
    <string name="BorrowAssets">借入资产</string>
    <string name="Borrowed">借入资产</string>
    <string name="minInvestAmount">起购资金</string>
    <string name="investNow">立即投资</string>
    <string name="annualized">年化率</string>
    <string name="market">行情市价</string>
    <string name="currency">币种</string>
    <string name="latest_price">最新价</string>
    <string name="gain24h">24h涨幅</string>
    <string name="highest24h">24h最高价</string>
    <string name="lowest24h">24h最低价</string>
    <string name="line24h">24h曲线</string>
    <string name="RMB">¥</string>
    <string name="preview">预告</string>
    <string name="novice_preview">新手预告</string>
    <string name="novice">新手</string>
    <string name="all">全部</string>
    <string name="platForm">平台标</string>
    <string name="mortgage">抵押标</string>
    <string name="invest">投资</string>
    <string name="daily_rate">日利率</string>
    <string name="deadline">期限</string>
    <string name="day">天</string>
    <string name="day_period">天期限</string>
    <string name="di3">抵</string>
    <string name="ping2">平</string>
    <string name="invest_confirm">立即投资</string>
    <string name="expect_annualized">预期年化</string>
    <string name="period">期限</string>
    <string name="mortgage_asset">抵押资产</string>
    <string name="mortgage_price">抵押物市价</string>
    <string name="novice_over_amount">新手剩余额度</string>
    <string name="invest_progress">投资进度</string>
    <string name="invest_lave">剩余可投</string>
    <string name="normal_msg">基础信息</string>
    <string name="start_time">开始时间</string>
    <string name="calc_way">计息方式</string>
    <string name="repay_way">还款方式</string>
    <string name="purchase_funds">起购资金</string>
    <string name="scroll_to_load_market">向上拖动查看投资详情</string>
    <string name="invest_summary">投资详情</string>
    <string name="invest_guidelines">投资须知</string>
    <string name="purchased_record">已购记录</string>
    <string name="add_record">追加记录</string>
    <string name="calc_way_msg">满标后当日计息</string>
    <string name="repay_way_msg">到期一次性还本付息</string>
    <string name="user_name">用户名</string>
    <string name="time">时间</string>
    <string name="add_amount">追加金额</string>
    <string name="mortgage_amount">追加后总额</string>
    <string name="amount">金额</string>
    <string name="buy_time">购买时间</string>
    <string name="input_money">输入金额</string>
    <string name="account_over">账户余额</string>
    <string name="over_to_use">可用余额:</string>
    <string name="over_all_invest">剩余全投</string>
    <string name="invest_money">投资金额</string>
    <string name="last_income">到期收益</string>
    <string name="last_income_1">到期收益:</string>
    <string name="over_lack_please_recharge">余额不足,需充值</string>
    <string name="over_lack">余额不足</string>
    <string name="pay_verify">支付验证</string>
    <string name="pay">支付</string>
    <string name="please_input_invest_amount">请输入投资金额</string>
    <string name="please_input_google_code">请输入谷歌验证码</string>
    <string name="paste">粘贴</string>
    <string name="new_user_not_enough">新手剩余额度不足</string>
    <string name="input_must_greater_minAmount">输入金额必须大于最小起投金额</string>
    <string name="min">最小</string>
    <string name="invest_guidelines_text">1.如果标的投资24小时内未达到100%，或24小时内抵押数字货币价格向下浮动超过20%，则该标的自动失效，并将货币归还给投资者。<![CDATA[<br/>]]><![CDATA[<br/>]]>
        2.在逾期时间达到7天时，平台会将抵押资产作交割处理，扣除逾期手续费后将资产按投资比例归还投资者。<![CDATA[<br/>]]><![CDATA[<br/>]]>
    3.平台制定警戒线（140%）及平仓线（110%），平仓线=借款金额*110%，警戒线=借款金额*140%。当抵押资产到达警戒线时，系统会提醒借款人增加抵押物。当抵押资产到达平仓线时，平台将会对抵押资产作交割处理并将归投资人所有，而抵押借款人不再拥有所抵押资产。</string>
    <string name="login">登录</string>
    <string name="login_now">立即登录</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="login_success">登录成功</string>
    <string name="regiest">注册</string>
    <string name="regiest_now">立即注册</string>
    <string name="go_regiest">去注册</string>
    <string name="go_login">去登录</string>
    <string name="please_input_email_code">请输入邮箱验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="please_input_invited_code">如有邀请人,请输入邀请码</string>
    <string name="please_input_correct_email">邮箱格式不正确，请重新输入</string>
    <string name="please_input_correct_pwd">8-20位,大写英文、小写英文、符号、数字至少有三类。</string>
    <string name="regiest_success">注册成功</string>
    <string name="forget_password">忘记密码</string>
    <string name="confirm_update">确认修改</string>
    <string name="update_success">修改成功</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="please_input_confirm_new_pwd">请再次确认新密码</string>
    <string name="pwd_not_equals">两次输入密码不一致</string>
    <string name="warm_tips">温馨提示</string>
    <string name="look_again">再看看</string>
    <string name="go_certified">去认证</string>
    <string name="certifing_shenhe">审核中</string>
    <string name="phone_certified">手机认证</string>
    <string name="google_certified">谷歌认证</string>
    <string name="kyc_refuse">拒绝理由</string>
    <string name="please_cerfity_phone_first">请先通过手机认证</string>
    <string name="kyc_certified">身份认证</string>
    <string name="please_goto_certified">为了保障您的投资收益和账户资产安全，需要先完成安全认证才能投资。</string>
    <string name="phone_certified_tip">提现，修改密码，及安全设置时用以收取验证短信</string>
    <string name="google_certified_tip">用于登录、提币、找回密码、修改安全设置、管理API时进行安全验证。</string>
    <string name="kyc_certified_tip">完成身份认证的用户才可以提币。</string>
    <string name="safe_certified">安全认证</string>
    <string name="certified">已认证</string>
    <string name="kyc_certify_retry">重试</string>
    <string name="invest_success">投资成功 </string>
    <string name="unwind_line">平仓线 </string>
    <string name="cordon_line">警戒线 </string>
    <string name="phone">手机号</string>
    <string name="sms_code">短信验证码</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_select_country_code">请选择国家电话编码</string>
    <string name="please_input_smscode">请输入短信验证码</string>
    <string name="please_input_correct_phone">手机号格式不正确，请重新输入</string>
    <string name="please_select_country_area">请选择国家/地区</string>
    <string name="certified_success">认证成功</string>
    <string name="please_save_google_key">温馨提示：记得备份谷歌二维码或密钥</string>
    <string name="google_qrcode_key">谷歌二维码及密钥：</string>
    <string name="google_code">谷歌验证码</string>
    <string name="please_input_google">请输入谷歌验证码</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="google_certify_tips">操作步骤：\n1.iOS用户在app store上下载“goole authenticator”，安卓用户在应用商城或百度搜索下载“谷歌验证器” 。\n2.安装在“Google Authenticator”应用程序中，点击右上角“+”号，然后选择“手动输入验证码”。\n3.粘贴上面的“密钥”到“密钥”输入栏，并填写您的LendChain账号，点击“完成”。\n4.复制“谷歌验证码”，粘贴到上面的“谷歌验证码”输入栏。请勿删除此双重验证密码账户，否则会导致您无法进行账户操作；如果误删，您可通过重置密钥重新获取。\n5.请妥善保管好你的密钥，如遇手机丢失，你可以通过该密钥恢复你的谷歌验证。</string>
    <string name="select_country_area">选择国家/地区</string>
    <string name="search">搜索</string>
    <string name="total_money_to_cny">总资产折合(CNY)</string>
    <string name="yesterday_income">昨日收益(CNY)</string>
    <string name="available_over">可用余额(CNY)</string>
    <string name="operate">操作</string>
    <string name="count">数量</string>
    <string name="my_wallet">我的钱包</string>
    <string name="coin_type">币种</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="transfer">转账</string>
    <string name="please_goto_certified_all_wallet">为了保证您的资产安全，请先完成安全认证。</string>
    <string name="recharge_address">充值地址</string>
    <string name="country">国家</string>
    <string name="real_name">姓名</string>
    <string name="born_date">生日</string>
    <string name="please_input_your_real_name">请输入你的真实名字</string>
    <string name="please_input_your_document_num">请输入你的证件号</string>
    <string name="document_type">证件类型</string>
    <string name="id_card">身份证</string>
    <string name="document_num">证件号</string>
    <string name="next_step">下一步</string>
    <string name="email_code">邮箱验证码</string>
    <string name="cllection_account_email">收款账户邮箱</string>
    <string name="transfer_count">转账数量</string>
    <string name="transfer_nickname_optional">昵称<font color='#509FFF'>(选填)</font></string>
    <string name="transfer_phone_optional">手机号<font color='#509FFF'>(选填)</font></string>
    <string name="transfer_confirm">确认转账</string>
    <string name="please_input_transfer_count">请输入转账数量</string>
    <string name="please_input_transfer_cllection_nickname">请输入收款人昵称</string>
    <string name="transfer_warm_tips">温馨提醒：\n1.平台内转账 0 手续费。\n2.平台内转账后立即到账。 \n</string>
</resources>