<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.account.rechargewithdraw.TransferCertifyActivity">

    <com.lend.lendchain.widget.BaseTitleBar
        android:id="@+id/base_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:btbBackground="@color/white" />
    <LinearLayout
        android:background="@color/color_F5F5F5"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <include layout="@layout/row_divider_12h"/>
        <FrameLayout
            android:background="@color/white"
            android:paddingLeft="@dimen/qb_px_12"
            android:paddingRight="@dimen/qb_px_12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_50">
            <TextView
                android:text="@string/email_code"
                android:layout_gravity="center_vertical"
                style="@style/text999999_14" />
            <EditText
                android:layout_marginLeft="@dimen/qb_px_10"
                android:id="@+id/transfer_certify_etEmailCode"
                android:theme="@style/MyEditText"
                android:background="@null"
                android:hint="@string/please_input_email_code"
                style="@style/text262626_14"
                android:maxLength="4"
                android:layout_gravity="center"
                android:inputType="number"
                android:layout_width="@dimen/qb_px_150"
                android:layout_height="@dimen/qb_px_20" />
            <TextView
                android:textColor="@color/text_999999_509fff_enabled_selector"
                android:id="@+id/transfer_certify_tvSendCode"
                android:text="@string/send_verify_code"
                android:layout_gravity="center_vertical|right"
                style="@style/text509FFF_14" />
        </FrameLayout>
        <include layout="@layout/row_divider_1px"/>
        <FrameLayout
            android:background="@color/white"
            android:paddingLeft="@dimen/qb_px_12"
            android:paddingRight="@dimen/qb_px_12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_50">
            <TextView
                android:text="@string/google_code"
                android:layout_gravity="center_vertical"
                style="@style/text999999_14" />
            <EditText
                android:layout_marginLeft="@dimen/qb_px_10"
                android:id="@+id/transfer_certify_etGoogleCode"
                android:theme="@style/MyEditText"
                android:background="@null"
                android:hint="@string/please_input_google_code"
                android:maxLength="6"
                style="@style/text262626_14"
                android:layout_gravity="center"
                android:inputType="number"
                android:layout_width="@dimen/qb_px_150"
                android:layout_height="@dimen/qb_px_20" />
            <TextView
                android:id="@+id/transfer_certify_tvPaste"
                android:text="@string/paste"
                android:layout_gravity="center_vertical|right"
                style="@style/text509FFF_14" />
        </FrameLayout>
        <Button
            android:layout_marginTop="@dimen/qb_px_30"
            android:id="@+id/transfer_certify_btnConfirm"
            android:layout_marginLeft="@dimen/qb_px_15"
            android:layout_marginRight="@dimen/qb_px_15"
            style="@style/buttonStyle"
            android:text="@string/confirm"
            android:background="@drawable/bg_4885ff_gradient_509fff_0174f2_radiu2_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_44" />
    </LinearLayout>

</LinearLayout>