<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5"
    android:orientation="vertical"
    tools:context=".ui.activity.account.KycActivity">

    <com.lend.lendchain.widget.BaseTitleBar
        android:id="@+id/base_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:btbBackground="@color/white" />

    <include layout="@layout/row_divider_12h" />

    <com.yangfan.widget.FormNormal
        android:id="@+id/kyc_fnCountry"
        style="@style/CustomFormBaseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fnBottomPadding="@dimen/qb_px_18"
        app:fnIndicatorResId="@mipmap/icon_jiantou_right"
        app:fnIndicatorVisible="true"
        app:fnTextColor="@color/color_262626"
        app:fnTextSize="14"
        app:fnTitle="@string/country"
        app:fnTitleTextColor="@color/color_999999"
        app:fnTitleTextSize="14"
        app:fnTopPadding="@dimen/qb_px_18" />

    <include layout="@layout/row_divider_1px" />

    <FrameLayout
        android:id="@+id/kyc_realName_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_50"
        android:background="@drawable/row_pressed2"
        android:clickable="true"
        android:paddingLeft="@dimen/qb_px_12"
        android:paddingRight="@dimen/qb_px_12">

        <TextView
            style="@style/text999999_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/qb_px_5"
            android:text="@string/real_name" />

        <EditText
            android:id="@+id/loan_etRealName"
            style="@style/text262626_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/please_input_your_real_name"
            android:paddingLeft="@dimen/qb_px_5"
            android:paddingRight="@dimen/qb_px_5"
            android:textColorHint="@color/color_CCCCCC"
            android:theme="@style/MyEditText" />
    </FrameLayout>

    <include layout="@layout/row_divider_1px" />

    <com.yangfan.widget.FormNormal
        android:id="@+id/kyc_fnBornDate"
        style="@style/CustomFormBaseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fnBottomPadding="@dimen/qb_px_18"
        app:fnIndicatorResId="@mipmap/icon_jiantou_right"
        app:fnIndicatorVisible="true"
        app:fnText="1990.01.01"
        app:fnTextColor="@color/color_262626"
        app:fnTextSize="14"
        app:fnTitle="@string/born_date"
        app:fnTitleTextColor="@color/color_999999"
        app:fnTitleTextSize="14"
        app:fnTopPadding="@dimen/qb_px_18" />

    <include layout="@layout/row_divider_1px" />

    <com.yangfan.widget.FormNormal
        android:id="@+id/kyc_fnDocument"
        style="@style/CustomFormBaseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fnBottomPadding="@dimen/qb_px_18"
        app:fnIndicatorResId="@mipmap/icon_jiantou_right"
        app:fnIndicatorVisible="true"
        app:fnText="@string/id_card"
        app:fnTextColor="@color/color_262626"
        app:fnTextSize="14"
        app:fnTitle="@string/document_type"
        app:fnTitleTextColor="@color/color_999999"
        app:fnTitleTextSize="14"
        app:fnTopPadding="@dimen/qb_px_18" />

    <include layout="@layout/row_divider_1px" />

    <FrameLayout
        android:id="@+id/kyc_document_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_50"
        android:background="@drawable/row_pressed2"
        android:clickable="true"
        android:paddingLeft="@dimen/qb_px_12"
        android:paddingRight="@dimen/qb_px_12">

        <TextView
            style="@style/text999999_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/qb_px_5"
            android:text="@string/document_num" />

        <EditText
            android:id="@+id/kyc_etDocumentNum"
            style="@style/text262626_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/please_input_your_document_num"
            android:paddingLeft="@dimen/qb_px_5"
            android:paddingRight="@dimen/qb_px_5"
            android:textColorHint="@color/color_CCCCCC"
            android:theme="@style/MyEditText" />
    </FrameLayout>

    <TextView
        android:id="@+id/kyc_btnNextStep"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_44"
        android:layout_marginLeft="@dimen/qb_px_15"
        android:layout_marginRight="@dimen/qb_px_15"
        android:layout_marginTop="@dimen/qb_px_30"
        android:background="@drawable/bg_4885ff_gradient_509fff_0174f2_radiu2_selector"
        android:text="@string/next_step" />
</LinearLayout>